<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/fragment_moviesMenu">
        <item
            android:id="@+id/Fragment_movies_menu_sort_with_type"
            android:title="@string/sort_with_type"
            android:orderInCategory="1"/>
        <item
            android:id="@+id/Fragment_movies_menu_sort_with_country"
            android:title="@string/sort_with_counrty"
            android:orderInCategory="2"/>
    </group>

    <item
        android:id="@+id/Fragment_movies_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search" />
</menu>