<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    tools:context="com.example.aliosama.dramatranslation.Activities.MovieActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/Movies_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/Movies_activity_image"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@string/movie_image_content_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp">

                    <!--Original Name-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/real_name"/>

                        <TextView
                            android:id="@+id/Movies_activity_Original_Name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:textStyle="normal"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimary"
                            android:text=""/>
                    </LinearLayout>
                    <!--Title-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/Movie_name"/>

                        <TextView
                            android:id="@+id/Movies_activity_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:textStyle="normal"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimary"
                            android:text=""/>
                    </LinearLayout>
                    <!--Date-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="normal"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/release_date"/>

                        <TextView
                            android:id="@+id/Movies_activity_Date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:textStyle="normal"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimary"
                            android:text=""/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Story"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"/>


                    <TextView
                        android:id="@+id/Movies_activity_story"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:text=""/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/movie_adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/movies_banner_ad_unit_id">
                </com.google.android.gms.ads.AdView>

                <LinearLayout
                    android:id="@+id/YoutubeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_grey"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailer"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@color/colorAccent"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_grey"/>

                <!--Youtube Trailer-->
                    <fragment
                        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
                        android:id="@+id/youtube_fragment"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </LinearLayout>

            <!--Watch & Download-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
                <Button
                    android:id="@+id/Movies_activity_DownloadBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/download"
                    android:background="@drawable/download_watch_btn_style"/>
                <Button
                    android:id="@+id/Movies_activity_WatchBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/watch"
                    android:background="@drawable/download_watch_btn_style"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
